--- a/practice/style2.css
+++ b/practice/style2.css
@@ -1,9 +1,11 @@
 b:hover {
     color: red;
 }
-u {
-    color: red
-}
-#firstcard {
-    padding-right: 25px;
+#img {
+    background-image: url("https://themewagon.github.io/famms/images/arrival-bg.png");
+    height: 600px;
+    width: 2300px;
+    background-repeat: no-repeat;
+    background-position: absolute;
+
 }
