--- a/practice/style.css
+++ b/practice/style.css
@@ -1,8 +1,25 @@
 body {
     background-image: url("slider-bg.jpg");
     background-size: 1950px 950px;
+    height: 950px;
     background-repeat: no-repeat;
   }
 b:hover {
     color: red;
   }
+  #img {
+    background-image: url("https://themewagon.github.io/famms/images/arrival-bg.png");
+    height: 600px;
+    width: 2300px;
+    background-repeat: no-repeat;
+    background-position: absolute;
+
+}
+#subscribe {
+  background-color: #e5cece;
+  color: #000435;;
+}
+#subs:hover {
+  background-color: white;
+  color: red;
+}
