--- a/practice/bootstrap.css
+++ b/practice/bootstrap.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("slider-bg.jpg");
-    background-size: 1950px 950px;
-    height: 950px;
+    background-size: 100% 950px;
+    height: 100%;
     background-repeat: no-repeat;
   }
 b:hover {
